--- a/less_5/task2/src/index.scss
+++ b/less_5/task2/src/index.scss
@@ -1,50 +1,49 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #root {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.users {
+.transfer-list {
+  display: flex;
+}
+
+.options {
+  width: 260px;
+  padding: 16px;
+
+  &__list {
+    display: flex;
+    flex-direction: column;
     list-style-type: none;
     padding: 0;
-}
+    margin: 16px 0;
+  }
 
-.user {
-    margin: 8px;
-    width: 150px;
-    display: flex;
-    
-    &__age {
-        font-weight: 700;
-        opacity: 0.5;
-        margin-left: auto;
-    }
-}
-
-.pagination {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.btn {
-    height: 32px;
+  &__title {
+    text-align: center;
+    background-color: #000;
     color: #fff;
     border-radius: 8px;
-    width: 64px;
+    line-height: 24px;
+  }
+
+  &__list-item {
+    background: transparent;
+    margin: 8px 0;
+    width: 100%;
     outline: none;
-    border: none;
-    text-transform: uppercase;
-    padding: 8px;
     cursor: pointer;
-    background-color: green;
+    line-height: 24px;
+    border-radius: 8px;
+  }
 }
